cabal-version: 2.2

name: runhs
version: 1.0.0.2
synopsis: Stack wrapper for single-file Haskell programs.
description:
  Stack wrapper for single-file Haskell programs.
  Declare package dependencies in your single-file Haskell program.
  Easily and reliably run your program, compile it, or load it in GHCi or Ghcid.
category: Tools
homepage: https://github.com/friedbrice/runhs#readme
bug-reports: https://github.com/friedbrice/runhs/issues
author: Daniel Brice
maintainer: danielbrice@gmail.com
copyright: 2020 Daniel Brice
license: BSD-3-Clause
license-file: README.md
build-type: Simple

source-repository head
  type: git
  location: https://github.com/friedbrice/runhs

executable runhs-exe
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
      base >=4.11 && <5
    , bytestring
    , file-embed
    , process
    , yaml
  default-language: Haskell2010
